--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
 	<tr>
 		<td>
 			<a href="https://www.kimika.com.br/conjunto-de-calca-e-cropped-soltinho-rosa-estampado">
-				<img src="https://i.imgur.com/uHde0vJ.png" width="600" style="display: block" height="553" border="0" alt=""></a></td>
+				<img src="https://i.imgur.com/dw2SzyE.png" width="600" style="display: block" height="553" border="0" alt=""></a></td>
 	</tr>
 	<tr>
 		<td>
 			<a href="https://www.kimika.com.br/vestido-longo-de-alca-fina-com-ajuste-estampado">
-				<img src="https://i.imgur.com/ATSzbhh.png" width="600" style="display: block" height="549" border="0" alt=""></a></td>
+				<img src="https://i.imgur.com/7rqeW5B.png" width="600" style="display: block" height="549" border="0" alt=""></a></td>
 	</tr>
 	<tr>
 		<td>
 			<a href="https://www.kimika.com.br/conjunto-de-short-e-blusa-soltinha-estampada-laranja">
-				<img src="https://i.imgur.com/hMdQhs2.png" width="600" style="display: block" height="557" border="0" alt=""></a></td>
+				<img src="https://i.imgur.com/6HtsMrl.png" width="600" style="display: block" height="557" border="0" alt=""></a></td>
 	</tr>
 	<tr>
 		<td>
 			<a href="https://www.kimika.com.br/conjunto-de-saia-estampada-e-blusa-bordada-preta">
-				<img src="https://i.imgur.com/8orAPeJ.png" width="600" style="display: block" height="540" border="0" alt=""></a></td>
+				<img src="https://i.imgur.com/c7NzVsA.png" width="600" style="display: block" height="540" border="0" alt=""></a></td>
 	</tr>
 	<tr>
 		<td>
