--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <table id="Table_01" width="600" height="3315" border="0" cellpadding="0" cellspacing="0">
 	<tr>
 		<td>
-			<img src="https://i.imgur.com/Int93iF.png" width="600" style="display: block" height="923" border="0" alt=""></td>
+			<img src="https://i.imgur.com/kmbHgtj.png" width="600" style="display: block" height="923" border="0" alt=""></td>
 	</tr>
 	<tr>
 		<td>
